--- a/sidebar.html
+++ b/sidebar.html
@@ -3,11 +3,11 @@
 		<div class="author__avatar"> <img src="images/pavan_photo.png" class="author__avatar" alt="Pavan Kumar" style="padding-top: 0%; padding-bottom: 0%;"></div>
 		<div class="author__content"><br>
 			<h2 style="font-size: x-large" class="author__name"><b>Pavan Kumar Medarametla</b></h2>
-			<p class="author__bio"  style="font-size: 15px;">MS in Mechatronics (focus on AI)<br>University of Siegen<br>Siegen, NRW</p>
+			<p class="author__bio"  style="font-size: 15px;">MS in Mechatronics (with focus on AI)<br>University of Siegen<br>Siegen, NRW</p>
 		</div>
 		<div class="author__urls-wrapper">
 			<ul class="author__urls social-icons">
-				<li><a href="mailto:pavankumarchowdary35@gmail.com" target="_blank">
+				<li><a href="mailto:pavankumarchowdary35@gmail.com">
 					<i class="fa fa-fw fa-envelope-square" aria-hidden="true" style="font-size: 20px;"></i>Email
 				</a></li>
 				<li><a href="https://www.linkedin.com/in/pavan-kumar-medarametla-9919841a1/" target="_blank">
