--- a/index.html
+++ b/index.html
@@ -66,33 +66,9 @@
 
                         <!-- <p><em>"Unraveling the mysteries hidden in data, sculpting the brains of artificial intelligence layer by layer, teaching robots to navigate the world,  empowering machines with the sense of sight, and empowering machines to comprehend and communicate with us."</em></p> -->
                         
-                        <p>I am currently pursuing my Master's degree in Mechatronics with focus on AI at <a href="https://www.uni-siegen.de/zsb/studienangebot/master/mechatronics.html">University of Siegen</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2020. I recently finished my Internship at <b>Bayer AG</b> worked on a project called <b>FactFinder</b> which is Q&A system with Fact verification ability.
-                             Currently, I am doing my Master's thesis at Bayer AG on the topic- Enhancing Retrieval component for RAG based Question Answering System in Life
-                             Sciences Research. <div class="sidebar sticky" style="margin-right: 0%;">
+                        <p>I am currently pursuing my Master's degree in Mechatronics with focus on AI at <a href="https://www.uni-siegen.de/zsb/studienangebot/master/mechatronics.html">University of Siegen</a>. I completed my Bachelor's in Mechanical Engineering from the <a href="https://iiitk.ac.in/">Indian Institute of Information Technology</a> in 2020. I recently finished my Internship at <b>Bayer AG</b> worked on a project called <b>FactFinder</b> which is Q&A system with Fact verification ability.Currently, I am doing my Master's thesis at Bayer AG on the topic- <b>Enhancing Retrieval component for RAG based Question Answering System in Life Sciences Research.</b></p>
 
-                                <div itemscope itemtype="http://schema.org/Person">
-                                    <div class="author__avatar"> <img src="images/pavan_photo.png" class="author__avatar" alt="Pavan Kumar" style="padding-top: 0%; padding-bottom: 0%;"></div>
-                                    <div class="author__content"><br>
-                                        <h2 style="font-size: x-large" class="author__name"><b>Pavan Kumar Medarametla</b></h2>
-                                        <p class="author__bio"  style="font-size: 15px;">MS in Mechatronics (focus on AI)<br>University of Siegen<br>Siegen, NRW</p>
-                                    </div>
-                                    <div class="author__urls-wrapper">
-                                        <ul class="author__urls social-icons">
-                                            <li><a href="mailto:pavankumarchowdary35@gmail.com" target="_blank">
-                                                <i class="fa fa-fw fa-envelope-square" aria-hidden="true" style="font-size: 20px;"></i>Email
-                                            </a></li>
-                                            <li><a href="https://www.linkedin.com/in/pavan-kumar-medarametla-9919841a1/" target="_blank">
-                                                <i class="fa fa-fw fa-linkedin-square" aria-hidden="true" style="font-size: 20px;"></i>LinkedIn
-                                            </a></li>
-                                            <li><a href="https://github.com/pavankumarchowdary35" target="_blank">
-                                                <i class="fa fa-fw fa-github" aria-hidden="true" style="font-size: 20px;"></i>Github
-                                            </a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div> </p>
-
-                        <p>My professional interests extend to projects spanning <b>Deep Learning, Computer Vision, and Natural Language Processing, Machine Learning</b>. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life.</p>
+                        <p>My professional interests extend to projects spanning <b>Deep Learning, Computer Vision, and Natural Language Processing, Machine Learning, Data Science</b>. Drawing upon my technical expertise acquired through engineering studies, I seek to synthesize technology and innovation in a manner that yields tangible outcomes. Beyond technical pursuits, I am driven by a profound enthusiasm for applying artificial intelligence to diverse domains, with a focus on developing impactful products that enhance the quality of human life.</p>
 
                         <p>When not coding, you will most often find me playing cricket, badminton :)</p>
 
